@@ -1,3 +1,10 @@
+logstash (1.4.2-5~ui60) unitix-60; urgency=low
+  * Updated internal elasticsearch to 1.3.4
+  * Updated integrated jruby to 1.7.16
+  * Updated integrated kibana to 3.1.1
+
+ -- Andreas Wirooks <andreas.wirooks@1und1.de> Fri, 17 Oct 2014 14:39:15 +0200
+
 logstash (1.4.2-4~ui60) unitix-60; urgency=low
 
   * Updated internal elasticsearch to 1.3.2
